# qt4hello

./: CMakeLists.txt  Main.cpp  MainWidget.cpp  MainWidget.h  MainWidget.ui  README.md
