CMAKE_MINIMUM_REQUIRED( VERSION 2.8.9 )
PROJECT( Qt4Hello )

SET( CMAKE_CXX_FLAGS "-std=c++11 -Wall -pedantic -Wno-long-long" )

SET( CMAKE_INCLUDE_CURRENT_DIR ON )
SET( CMAKE_AUTOMOC ON )

FIND_PACKAGE( Qt4 REQUIRED QtCore QtGui )

INCLUDE( ${QT_USE_FILE} )

SET( SOURCES
  main.cpp
)

ADD_EXECUTABLE( qt4hello ${SOURCES} )

TARGET_LINK_LIBRARIES( qt4hello
  ${QT_LIBRARIES}
)
