CMAKE_MINIMUM_REQUIRED( VERSION 3.0.2 )

PROJECT( Qt4Hello )

SET( CMAKE_CXX_FLAGS "-std=c++11 -Wall -pedantic -Wno-long-long" )

SET( CMAKE_AUTOMOC ON )
set( CMAKE_AUTOUIC ON )
SET( CMAKE_INCLUDE_CURRENT_DIR ON )

FIND_PACKAGE( Qt4 REQUIRED QtGui )

SET( SOURCES
  Main.cpp
  MainWidget.cpp
)

ADD_EXECUTABLE( qt4hello ${SOURCES} )
TARGET_LINK_LIBRARIES( qt4hello
  Qt4::QtGui
)
